# example-mod

./: CMakeLists.txt  mod.json
_github/workflows/: build.yml
src/: main.cpp
